--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,19 +7,16 @@
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
 
-        <div>
+<div>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
 
-            <h2><a href="">My first post</a></h2>
-            <p>published: 2/24/2018 3:19PM</p>
-            <p>Testing</p>
-        </div>
-
-        <div>
-
-            <h2><a href="">My second post</a></h2>
-            <p>published: 14.06.2014, 12:14</p>
-
-            <p>Testing 2</p>
-        </div>
+{% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
     </body>
 </html>
